--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <!-- Title of the website -->
     <title>Sign up page</title>
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="public/style.css">
     <!-- FontAwesome Icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
         integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <!-- Icon -->
-    <link rel="icon" type="image/png" href="https://www.google.com/s2/favicons?domain=css-tricks.com">
+    <!-- Icon by Aakanksha Yaduvanshi from Icon Scout: https://iconscout.com/icon/account-2957828-->
+    <link rel="shortcut icon" href="assets/Account.ico" type="image/x-icon">
     <!-- Script file: (defer - Loads after the HTML body is rendered) -->
-    <script defer src="script.js"></script>
+    <script defer src="public/script.js"></script>
 </head>
 
 <body>
